--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ background-image: url("https://www.transparenttextures.com/patterns/45-degree-fa
   margin-right: 100px;
   margin-left:100px;
   margin-bottom:10px;
-  background-color:#C9AE5D;
-  color: white;
+  
+  color: #C9AE5D;
   text-shadow: 2px 2px 4px #003366;
   text-align: center;
   box-shadow: 10px 10px 20px #003366;
@@ -290,6 +290,41 @@ html.hidescrollbar body{
     transition: opacity 1s, visibility 0s 1s;
 }
 
-.jumbotron{
-  background-color: transparent;
+
+
+.jumbotron-billboard .img {
+    margin-bottom: 0px;
+    opacity: 0.2;
+    color: #fff;
+    background: #000 url("http://img07.deviantart.net/368c/i/2011/197/1/a/ravenclaw_flag_by_kooro_sama-d3x5pj3.png") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+  
+  
+  position:absolute;
+  top:0;left:0;
+  z-index:1;
 }
+.jumbotron {position:relative;padding:50px;}
+.jumbotron .container {z-index:2;
+ position:relative;
+  z-index:2;
+}
+.img{
+  width:400px;
+  height:500px;
+  
+}
+
+.jumbotron{
+  
+  height:500px;
+  margin: 0px;
+  /*background-color:;*/
+  margin-left: 100px;
+  margin-right:100px;
+}
+
+
